@@ -120,6 +120,7 @@ void
 userlist_select (session *sess, char *name)
 {
 	GtkTreeIter iter;
+	GtkTreePath *path;
 	GtkTreeView *treeview = GTK_TREE_VIEW (sess->gui->user_tree);
 	GtkTreeModel *model = gtk_tree_view_get_model (treeview);
 	GtkTreeSelection *selection = gtk_tree_view_get_selection (treeview);
@@ -136,6 +137,15 @@ userlist_select (session *sess, char *name)
 					gtk_tree_selection_unselect_iter (selection, &iter);
 				else
 					gtk_tree_selection_select_iter (selection, &iter);
+
+				/* and make sure it's visible */
+				path = gtk_tree_model_get_path (model, &iter);
+				if (path)
+				{
+					gtk_tree_view_scroll_to_cell (treeview, path, NULL, TRUE, 0.5, 0.5);
+					gtk_tree_path_free (path);
+				}
+
 				return;
 			}
 		}
