@@ -26,8 +26,9 @@
  - Fixed: Private messages delivered to status window when nickname
    is the same as the network [977550].
  - Maximised window-state is now saved.
- - Double middle-clicking a nickname in the text area will select it
-   in the userlist.
+ - Double middle-clicking a nickname in the text area will now select
+   it in the userlist.
+ - Included a work-around to stop X-Sys plugin crashing with GTK 2.4.
  - Smaller bugs: [970746] [968652].
 
 
